# DAPH_API

./: .pre-commit-config.yaml  README.md  alembic.ini  manage.py  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
daph_api/: __init__.py  __main__.py  api.py  asgi.py  conftest.py  logging.py  settings.py  urls.py  wsgi.py
daph_api/db/: base.py  utils.py
daph_api/db/dao/: dummy_dao.py
daph_api/db/migrations/: env.py
daph_api/db/models/: __init__.py  dummy_model.py
daph_api/file/: upload.py
daph_api/manuscript/: api.py
daph_api/services/: __init__.py
daph_api/tests/: __init__.py  test_dummy.py  test_echo.py
daph_api/web/: __init__.py  application.py  lifetime.py
daph_api/web/api/: __init__.py  router.py
daph_api/web/api/docs/: __init__.py
daph_api/web/api/dummy/: __init__.py  views.py
daph_api/web/api/echo/: __init__.py  views.py
daph_api/web/api/monitoring/: __init__.py
demoApp/: urls.py  views.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: README.md
registry/: admin.py  factories.py  models.py
registry/management/commands/: populate.py
registry/migrations/: 0001_initial.py  0002_remove_review_reviewer_id_author_is_reviewer_and_more.py  0002_rename_author_manuscript_authors.py  0003_remove_walletaddress_user_id_walletaddress_author_id.py  0004_alter_manuscript_date_submission.py  0005_author_balance.py  0005_manuscript_version.py
static/styles/: demo-main.css  demo-main.css.map  demo-main.scss
templates/: base.html
templates/demoApp/: create-user.html  index.html  upload.html
templates/registration/: login.html  signup.html
